Version 0.2.5     unreleased

	* Pull in latest updates from run-script-framework.

Version 0.2.4     26 Feb 2024

	* Upgrade to Poetry v1.8.0 and make related adjustments.
	* Disable Python keyring via poetry.toml.
	* Update Poetry install instructions in DEVELOPER.md.
	* Pull in latest version of run-script-framework.
	* Upgrade to gha-shared-workflows@v4 with new Poetry setup.
	* Add support for 'run outdated' and update dependencies.

Version 0.2.3     17 Jan 2024

	* Update jinja2 to address CVE-2024-22195 from Dependabot.

Version 0.2.2     05 Nov 2023

	* Update urllib3 to address Dependabot warnings.
	* Upgrade to Poetry v1.7.0 for official Python 3.12 support.

Version 0.2.1     11 Oct 2023

	* Upgrade major dependencies.
	* Upgrade build process to Poetry v1.6.1.
	* Add support for Python v3.12.

Version 0.2.0     17 Sep 2023

	* Initial release to PyPI.