@@ -47,13 +47,12 @@ attrs = "^23.1.0"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.2"
 pytest-testdox = "^3.1.0"
-coverage = "^6.5.0"  # coveralls needs v6
+coverage = "^7.4.4"
 pylint = "^3.0.1"
 pre-commit = "^3.4.0"
 black = "^24.2.0"
 mypy = "^1.6.0"
 isort = "^5.12.0"
-coveralls = "^3.3.1"
 colorama = "~0, >=0.4.6"
 types-pillow = "^10.0.0.3"
 
