@@ -1,6 +1,7 @@
 Version 0.2.5     unreleased
 
 	* Pull in latest updates from run-script-framework.
+	* Simplify GHA integration with coveralls.io.
 
 Version 0.2.4     26 Feb 2024
 
